correcting Bugs on mobile version (z-index)

--- a/css/index.css
+++ b/css/index.css
@@ -219,7 +219,7 @@ footer a{
 @media (max-width: 900px) {
   .input{
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     margin-left: 5%;
     width: 85%;
   }
